feat: create get quizzes history
